--- a/style.css
+++ b/style.css
@@ -209,8 +209,8 @@ section {
       text-align: center;
 }
 .typed-cursor {
-      font-size: 2.5rem;
-      color: #
+      font-size: 1.5rem;
+      color: #2563eb;
       opacity: 1;
       animation: blink 0.7s infinite; /* تأثير وميض المؤشر */
 }
