--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ header {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
   z-index: 999;
   display: none;
 }
